--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,20 @@ div {
     height: 100vh; padding-top: 20px; font-size: 40px;
 }
 
+#blob {
+    width: 100px;
+    height: 100px;
+    background: red;
+    position: relative;
+    animation: mymove 5s infinite;
+    animation-timing-function: linear;
+  }
+  @keyframes mymove {
+    from {top: 0px;}
+    to {bottom: 200px;}
+  }
+
+
 #first {
     background: lightgray;}
     #second {
@@ -24,3 +38,10 @@ div {
                     
                     #top {position: fixed; bottom: 0; right: 0;}
 
+                    html {
+                        scroll-behavior: smooth;
+                    }
+
+      
+
+          
