--- a/yamila.css
+++ b/yamila.css
@@ -1,3 +1,12 @@
-.nextstep { color: teal;}
 
+/* changes the color of the links, instead of just plain blue*/
+.nextstep { color: teal;}
+/* changes color of the card */
 .card {color: whitesmoke;}
+
+/* adds borders and color to the BS default button*/
+.btn-default {border:solid;
+              background-color: gray;}
+
+/*changed the shape of the cards*/
+/*added a class name for card to shap borders and stuff named "colorcard"
