--- a/amber.css
+++ b/amber.css
@@ -1,23 +1,32 @@
-body {
-    margin: 60;
-  }
-  .column {
-  float: left;
-  width: 25%;
-  padding: 0 10px;
-  }
   .container::after, .row::after {
     content: "";
     clear: both;
     display: table;
   }
-  .row {
-    margin: 0 -5px;
-  }
-  * {
-    box-sizing: border-box;
-  }
-  div {
+ 
+  .div {
     text-align: center;
     color: black;
   }
+  .content {
+    max-width: 500px;
+    margin: auto;
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+  .column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px;
+  }
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+ 
