--- a/amber.css
+++ b/amber.css
@@ -2,6 +2,7 @@
     content: "";
     clear: both;
     display: table;
+    max-width: 1150px;
   }
  
   .div {
@@ -9,17 +10,19 @@
     color: black;
   }
   .content {
-    max-width: 500px;
+    max-width: 1150px;
     margin: auto;
+    float: center;
   }
   
   * {
     box-sizing: border-box;
   }
+
   .column {
     float: left;
     width: 50%;
-    padding: 10px;
+    padding: 10px ;
     height: 300px;
   }
   
@@ -29,4 +32,27 @@
     clear: both;
   }
   
- 
+ img {
+   width: 100%;
+   height: 500px;
+ }
+
+h1 {
+  text-align: center;
+}
+
+nav {
+  text-align: center;
+}
+
+.space{
+  margin-top: 300px;
+}
+
+h2 {
+  text-align: center;
+}
+
+p{
+  text-align: center;
+}
