--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,13 @@
 
 nav { background-image: url("");
     background-size: 100%;
+
     
 
 }
-
+ nav a {
+     text-align: center;
+ }
 
 
 
@@ -20,6 +23,8 @@ nav { background-image: url("");
     left: 800px;
     animation: mymove 5s infinite;
     animation-timing-function: linear;
+    animation-iteration-count: 1;
+    
     width: 300px;
    
 }
@@ -34,6 +39,7 @@ nav { background-image: url("");
     animation-timing-function: linear;
     animation-delay: 5s;
     animation-play-state:paused 5s;
+    animation-iteration-count: 1;
     width: 300px;
 }
 
@@ -46,6 +52,7 @@ nav { background-image: url("");
     animation: mymove 5s infinite;
     animation-timing-function: linear;
     animation-delay: 10s;
+    animation-iteration-count: 1;
     width: 300px;
 }
 
@@ -58,6 +65,7 @@ nav { background-image: url("");
     animation: mymove 5s infinite;
     animation-timing-function: linear;
     animation-delay: 15s;
+    animation-iteration-count: 1;
     width: 300px;
 }
 
@@ -70,6 +78,7 @@ nav { background-image: url("");
     animation: mymove 2s infinite;
     animation-timing-function: linear;
     animation-delay: 20s;
+    animation-iteration-count: 1;
     width: 300px;
 }
 
@@ -81,6 +90,11 @@ nav { background-image: url("");
 div {
     height: 100vh; 
     font-size: 40px;;
+}
+
+ul p {
+    font-size: 100px;
+    text-align: center;
 }
 
 
@@ -108,6 +122,11 @@ div {
                         scroll-behavior: smooth;
                     }
 
-      
+                    footer {
+                        text-align: center;
+                        display: inline;
+                       
+                    }
+
 
           
